# proto_rpc

./: .gitignore  CMakeLists.txt  README.md
include/proto_rpc/: channel.hpp  controller.hpp  message_coding.hpp  namespace.hpp  server.hpp
proto/: example_service.proto  rpc_messages.proto
src/: example_client.cpp  example_server.cpp
